jvm memory & others about memory & cpu